Fix align in case of many txs per charity

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -86,9 +86,9 @@ body {
 .charity {
   display: inline-block;
   width: 160px;
-  height: 100px;
   margin: 14px;
   text-align: center;
+  vertical-align: top;
 }
 
 .charity .logo {
